# templates-michiel

./: .gitignore
react-connect-to-fastapi/: README.md  docker-compose.yml
react-connect-to-fastapi/backend/: .dockerignore  Dockerfile  README.md  app.db  pyproject.toml  run.py
react-connect-to-fastapi/backend/app/: deps.py  main.py
react-connect-to-fastapi/backend/app/api/: __init__.py
react-connect-to-fastapi/backend/app/api/routes/: auth.py  health.py  items.py  users.py
react-connect-to-fastapi/backend/app/core/: config.py  db.py  errors.py  init_db.py  middleware.py  security.py
react-connect-to-fastapi/backend/app/models/: __init__.py  item.py  user.py
react-connect-to-fastapi/backend/app/schemas/: __init__.py  common.py  item.py  token.py  user.py
react-connect-to-fastapi/backend/app/services/: auth.py  item.py  user.py
react-connect-to-fastapi/backend/tests/: conftest.py  test_auth.py  test_health.py
react-connect-to-fastapi/frontend/: Dockerfile  nginx.conf  package-lock.json
react-connect-to-fastapi/frontend/src/: App.css  App.jsx
react-connect-to-fastapi/frontend/src/components/: AuthButtons.jsx  DataTable.jsx  Form.jsx  ItemCard.jsx  ItemForm.jsx  LoginForm.jsx  Navbar.jsx  RegisterForm.jsx  ThemeSwitcher.jsx  card.jsx
react-connect-to-fastapi/frontend/src/context/: AuthContext.jsx  ItemContext.jsx
